# Goose

./: .gitignore  Cargo.toml  agents.md  bridgeimplemntation.md  progress1.md  progress1aug.md  progressII.md  thinking_changes.md
AETHERBUSPYTHON/: STREAM_KEYS.md  agent_bus_minimal.py  bus.py  bus_adapterV2.py  bus_connector.py  bus_monitor.py  envelope.py
AETHERBUSPYTHON/generic_relay/: generic_relay.py  generictest.html  goose_relayws.py
AETHERBUSPYTHON/generic_relay/goose/: generictest.html  goose_client.py
config/: orchestrator_registry.json
crates/ag1_mcp_server/: Cargo.toml
crates/ag1_mcp_server/src/: main copy.md  main.md  main.rs
crates/ag1_meta/: Cargo.toml  readme.md
crates/ag1_meta/src/: lib.rs  lib_pregrp.rs  registry.rs  tool.rs
crates/ag1goose-bridge/: Cargo.toml
crates/ag1goose-bridge/src/: bridge.rs  config.rs  goose.code-workspace  main.rs  session.rs  session_linux.rs  util.rs
crates/bus/: Cargo.toml
crates/bus/src/: lib.rs  lib_pregrp.rs
crates/goose/: Cargo.toml
crates/goose-cli/: Cargo.toml
crates/goose-cli/src/: cli.md  cli.rs
crates/goose-cli/src/commands/: ag1.rs  mod.rs  web.rs
crates/goose-cli/src/recipes/: extract_from_cli.rs  mod.rs  recipe.rs  secret_discovery.rs  secret_management.rs
crates/goose-llm/src/prompts/: system.md
crates/goose/src/agents/: sub_recipe_manager.rs
crates/goose/src/agents/recipe_tools/: dynamic_task_tools.rs  sub_recipe_tools.rs
crates/goose/src/agents/subagent_execution_tool/: subagent_execute_task_tool.rs
crates/goose/src/agents/subagent_execution_tool/lib/: mod.rs
pythonexamples/: 4.2 Dev Guide AetherBus.md  4.2a Dev Guide Parcels.md  4.2b simple_template.py  5.3_Dev_Onboard.md  99BusModel.md  BlobStorageInternal.md  bus.py  bus_adapterV2.py  dev_agent.py  envelope.py  keys.py  pythonexample.md
