[package]
name = "ag1_mcp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
ag1_meta = { path = "../ag1_meta" }
anyhow = "1"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "0.3", features = ["server", "macros", "transport-io"] }