[package]
name = "ag1_meta"
version = "2.1.0"
edition = "2021"

[dependencies]
bus = { path = "../bus" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rmcp = "0.2"          # Goose tool trait
async-trait = "0.1"   # to implement Tool async


[lints]
workspace = true
