[package]
name = "ag1goose-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bus = { path = "../bus" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync", "fs"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
which = "6"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
clap = { version = "4", features = ["derive"] }